--- a/package.json
+++ b/package.json
@@ -10,9 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
+    "@legendapp/list": "^1.1.4",
+    "@react-native/new-app-screen": "0.80.2",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.7",
+    "@tanstack/react-query": "^5.84.2",
+    "axios": "^1.11.0",
+    "lottie-react-native": "^7.3.1",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "@react-native/new-app-screen": "0.80.2"
+    "react-native-bootsplash": "^6.3.10",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-mmkv": "^3.3.0",
+    "react-native-reanimated": "^4.0.2",
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.13.1",
+    "react-native-sound": "^0.12.0",
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-webview": "^13.15.0",
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
