--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-bootsplash": "^6.3.10",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-mmkv": "^3.3.0",
     "react-native-reanimated": "^4.0.2",
