--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "^4.13.1",
     "react-native-sound": "^0.12.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "^0.4.1"
   },
