--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@legendapp/list": "^1.1.4",
     "@react-native/new-app-screen": "0.80.2",
+    "@react-navigation/material-top-tabs": "^7.3.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
     "@tanstack/react-query": "^5.84.2",
@@ -23,11 +24,15 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-mmkv": "^3.3.0",
+    "react-native-pager-view": "^6.9.1",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^4.0.2",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.13.1",
     "react-native-sound": "^0.12.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-tab-view": "^4.1.3",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "^13.15.0",
     "react-native-worklets": "^0.4.1"
