--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,9 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+
+MYAPP_UPLOAD_STORE_FILE=qurany.keystore
+MYAPP_UPLOAD_KEY_ALIAS=qurany
+MYAPP_UPLOAD_STORE_PASSWORD=qurany
+MYAPP_UPLOAD_KEY_PASSWORD=qurany
