--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-top-tabs": "^7.3.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.84.2",
     "axios": "^1.11.0",
     "react": "19.1.0",
@@ -34,7 +35,8 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
     "react-native-webview": "^13.15.0",
-    "react-native-worklets": "^0.4.1"
+    "react-native-worklets": "^0.4.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
