--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-bootsplash": "^6.3.10",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-google-mobile-ads": "^15.7.0",
     "react-native-mmkv": "^3.3.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^4.0.2",
