--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-screens": "^4.13.1",
     "react-native-sound": "^0.12.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^15.12.1",
     "react-native-tab-view": "^4.1.3",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
