--- a/ios/forsa_quran/Info.plist
+++ b/ios/forsa_quran/Info.plist
@@ -33,6 +33,13 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>RCTNewArchEnabled</key>
+	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>UthmanTNB_v2-0.ttf</string>
+		<string>UthmanTN_v2-0.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>BootSplash</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -47,10 +54,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>UthmanTNB_v2-0.ttf</string>
-		<string>UthmanTN_v2-0.ttf</string>
-	</array>
 </dict>
 </plist>
