load word quran font and edit db query and params

--- a/ios/forsa_quran/Info.plist
+++ b/ios/forsa_quran/Info.plist
@@ -39,6 +39,7 @@
 	<array>
 		<string>UthmanTNB_v2-0.ttf</string>
 		<string>UthmanTN_v2-0.ttf</string>
+		<string>Uthmanic-HAFS.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>BootSplash</string>
