--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/slider": "^5.0.1",
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/material-top-tabs": "^7.3.6",
     "@react-navigation/native": "^7.1.17",
@@ -30,7 +31,6 @@
     "react-native-screens": "^4.13.1",
     "react-native-sound": "^0.12.0",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-svg": "^15.12.1",
     "react-native-tab-view": "^4.1.3",
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.3.0",
