--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-mmkv": "^3.3.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^4.0.2",
+    "react-native-restart-newarch": "^1.0.82",
     "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "^4.13.1",
     "react-native-sound": "^0.12.0",
