--- a/ios/Podfile
+++ b/ios/Podfile
@@ -13,7 +13,7 @@ if linkage != nil
   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
   use_frameworks! :linkage => linkage.to_sym
 end
-
+pod 'Google-Mobile-Ads-SDK'
 target 'forsa_quran' do
   config = use_native_modules!
 
